# tubez

./: CMakeLists.txt  INSTALL  README.md
example/: CMakeLists.txt  div_3_5.cpp  div_3_5_pull.cpp  main_common.hpp  project_euler.cpp  reducer.cpp  reducer_ref.cpp  sum_digits.cpp  sum_digits_pull.cpp  sum_test.cpp  vector_transform.cpp
src/: tubez.hpp
src/details/: base.hpp  drain.hpp  source.hpp  stream.hpp  tube.hpp
